# ndisc

./: CHANGELOG.md  Makefile  README.md  SUITE.md  index.html  ndisc-introduction.md  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
docs/: cross-platform-handoff-2026-07-20.md
schema/: README.md  clip-mapping-design-2026-07-17.md  clip.v1.json  clip.v1.json.sha256  coverage-by-type-design-2026-07-22.md  current-feed-2026-06-23.md  feed.v1.json  glmps-catchup-2026-06-10.md  glmps-genre-expansion-2026-06-14.md  glmps-proposal-electronic-grey-2026-06-12.md  master-release-key-design-2026-07-19.md  release.v2.json  release.v2.json.sha256  sources-design-2026-06-21.md  terrain-roots-design-2026-06-16.md  v2-proposal-glmps-reply.md  v2-proposal.md  video-incubation-2026-06.md  visualisations.md
schema/fixtures/: deletion-5.json  release-31237-v2.full.json  release-31237-v2.minimal.json  release-31237-v2.partial.json  release-31237.minimal.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  master_key.rs
src/components/: AddReleaseForm.tsx  BatchEditView.tsx  CurrentView.tsx  DeleteDialog.tsx  DiscogsEnrichPanel.tsx  DuplicatesDialog.tsx  LabelPanel.tsx  LabelviewPanel.tsx  LeafIcon.tsx  LibraryPanel.tsx  MergeConfirm.tsx  NostrPanel.tsx  ReleaseDetail.tsx  ReleaseList.tsx  Section.tsx  StatsView.tsx  ToolbarIconButton.tsx  TrashConfirm.tsx  UndoToast.tsx
src/hooks/: useFeed.tsx  useReactions.tsx  useSourceMeta.ts
src/lib/: curation.ts  dupDismiss.ts  genre.ts  labelSeed.ts  publishState.ts  rating.ts  source.ts  tauri.ts
