[package]
name = "ndisc"
version = "0.2.0-beta.5"
description = "Music discography library — physical & digital releases, with Nostr sharing"
authors = ["xjmzx"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ndisc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bundled SQLite — vendors libsqlite3 with the build, so no system dep needed.
rusqlite = { version = "0.32", features = ["bundled"] }
# Master-release-key: NFKD + combining-mark strip for the content-hash
# normalisation, and SHA-256 for its wire form. See src/master_key.rs +
# schema/master-release-key-design-2026-07-19.md. (Both were already transitive.)
unicode-normalization = "0.1"
sha2 = "0.10"
# Local-library import: walk dirs and read audio tags.
trash = "5"
walkdir = "2"
lofty = "0.22"
# Discogs CSV collection import.
csv = "1"
# Nostr identity: keypair generation, bech32 npub/nsec encoding.
nostr = "0.43"
# Nostr relay client (websockets, connection pool, signing).
nostr-sdk = "0.43"
# tokio's `time::sleep` for polite relay throttling in publish_library.
tokio = { version = "1", features = ["time"] }
# HTTP client for downloading cover images from nostr.build / Blossom hosts.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# OS keychain (libsecret on Linux via secret-service).
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
